--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -1,29 +1,47 @@
 <!DOCTYPE html>
 <html> 
 <head> 
-    <meta charset="utf-8">
-    <title>Untitled PAGE-2</title>
-    <style type="text/css">
-        A:link{text-decoration:none; color:white;}
-        A:visited{text-decoration:none; color:white;}
-        A:hover{text-decoration:none; color:grey;}
-    </style>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css" type="text/css" media="all">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    
+    <title>PAGE2</title>
 </head>
 
 
 <body> 
-    <body bgcolor="black" text="white">
-
-
-    <h1><a href="index.html">My webpage</a></h1>
-
-    <ol> 
-        <li><a href="Untitled-1.html">list 1</a></li>
-        <li><a href="Untitled-2.html">list 2</a></li>
-        <li><a href="Untitled-3.html">list 3</a></li>
-    </ol>
     
-    <h2>DLWHDGUR12</h2>
-    <strong>Write something here2</strong>
+    <div class="main">
+        <div class="title">
+            <h1><a href="index.html">My webpage</a></h1>
+        </div>
+
+        <div class="content">
+
+            <div class="navigation">
+                <h2 style="text-align: center">
+                    <a href="index.html" style="text-decoration: none; padding: 6px; border:6px solid #80ff008a; background-color: #80ff0041; color: #80ff00;">HOME</a>            
+                    <a href="aboutme.html" style="text-decoration: none; padding: 6px; border:6px solid #80ff008a; background-color: #80ff0041; color: #80ff00;">ABOUT ME</a>
+                    <a href="contact.html" style="text-decoration: none; padding: 6px; border:6px solid #80ff008a; background-color: #80ff0041; color: #80ff00;">CONTACT</a>
+                    <a href="hello.html" style="text-decoration: none; padding: 6px; border:6px solid #80ff008a; background-color: #80ff0041; color: #80ff00;">HELLO</a>
+                    <a href="dailylife.html" style="text-decoration: none; padding: 6px; border:6px solid #80ff008a; background-color: #80ff0041; color: #80ff00;">DAILYLIFE</a>
+                </h2>
+            </div>
+
+
+            <ol> 
+                <li><a href="Untitled-1.html">list 1</a></li>
+                <li><a href="Untitled-2.html">list 2</a></li>
+                <li><a href="Untitled-3.html">list 3</a></li>
+            </ol>
+
+
+            <h2>DLWHDGUR12</h2>
+            <strong>Write something here2</strong>
+
+        </div>
+    </div>
 </body>
 </html>
