--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     
-    <title>PAGE1</title>
+    <title>ABOUT ME</title>
+
+    <style>
+        .title{
+            font-size: 25px;
+            text-align: center;
+        }
+    </style>
 </head>
 
 
@@ -19,6 +26,7 @@
         </div>
 
         <div class="content">
+            <img src="C:\Users\LG\Desktop\visual studio\web1\images\greenline.gif" alt="Where I am from" style="width:100%;">
 
             <div class="navigation">
                 <h2 style="text-align: center">
@@ -30,19 +38,12 @@
                 </h2>
             </div>
 
-
-            <ol> 
-                <li><a href="Untitled-1.html">list 1</a></li>
-                <li><a href="Untitled-2.html">list 2</a></li>
-                <li><a href="Untitled-3.html">list 3</a></li>
-            </ol>
-
-
             <h2>DLWHDGUR12</h2>
-            <strong>Write something here1</strong>
+            
+            <img src="C:\Users\LG\Desktop\visual studio\web1\images\koreafl.gif" alt="Where I am from" style="width:100px;">
+            I'm from Korea
 
-        </div>
     </div>
-
+   
 </body>
 </html>
